--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta
       name="description"
       content="HealScout helps you find nearby clinics and hospitals based on your symptoms, making it easier to connect with the right healthcare providers when you need them most." />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.css" />
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -86,17 +90,17 @@
     <!--Main-->
 
     <!--Shery JavaScript Wala-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <script src="script.js"></script>
     <script
       type="text/javascript"
       src="https://unpkg.com/sheryjs/dist/Shery.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/sheryjs/dist/Shery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
-    <script src="script.js"></script>
   </body>
 </html>
 
