--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
   <body>
     <div id="main">
       <div id="back">
-        <img src="images/IMG_7564.JPG" alt="" />
-        <img src="images/IMG_7565.JPG" alt="" />
-        <img src="images/IMG_7566.JPG" alt="" />
-        <img src="images/IMG_7567.JPG" alt="" />
-        <img src="images/IMG_7568.JPG" alt="" />
+        <img src="images/IMG_ 7563.png" alt="" />
+        <img src="images/IMG_7562.png" alt="" />
+        <img src="images/IMG_7651.png" alt="" />
       </div>
       <div id="top">
         <div id="wrkingarea">
