added logo  and fixed paragraph on heroright

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div id="nav">
             <div id="nleft">
               <img
-                src="images/raybanlogo.png"
+                src="images/healscoutlogo01.png"
                 alt="logo of HealScout organization or project STEMbitious by Shayan Azfar 9 D" />
               <a href="#">purpose</a>
               <a href="#">about</a>
@@ -62,20 +62,15 @@
               <button>SEARCH NOW</button>
             </div>
             <div id="heroright">
-              <p>Lorem ipsum dolor sit amet.</p>
+              <p>Find Clinics and Hospitals near by you!</p>
               <div id="imagediv"></div>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id
-                accusamus odit inventore velit dolores rem aut reprehenderit
-                tempora consectetur exercitationem non deleniti nihil
-                consequatur, est repudiandae libero perferendis placeat quisquam
-                blanditiis! Dolore, nostrum odit!
+                HealScout helps you find nearby clinics and hospitals based on
+                your symptoms, making it easier to connect with the right
+                healthcare providers when you need them most.
               </p>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque
-                ducimus alias perferendis, labore officiis quaerat distinctio
-                repellendus tempora, excepturi qui voluptatem earum hic.
-              </p>
+
+              <p></p>
             </div>
             <!--Hero Right-->
           </div>
