added pages and edited scroll animation

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
               <img
                 src="images/healscoutlogo01.png"
                 alt="logo of HealScout organization or project STEMbitious by Shayan Azfar 9 D" />
-              <a href="#">purpose</a>
-              <a href="#">about</a>
+              <a href="purpose.html">purpose</a>
+              <a href="about.html">about</a>
             </div>
             <div id="nright">
-              <a href="">SERVICE</a>
-              <a href="">SEARCH</a>
+              <a href="service.html">SERVICE</a>
+              <a href="search.html">SEARCH</a>
             </div>
           </div>
           <div id="hero">
@@ -81,6 +81,9 @@
       <!--Top-->
     </div>
     <!--Main-->
+
+    <!--scroll reveal-->
+    <script src="https://unpkg.com/scrollreveal"></script>
 
     <!--Shery JavaScript Wala-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
