--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <body>
     <div id="main">
       <div id="back">
-        <img src="images/IMG_ 7563.png" alt="" />
-        <img src="images/IMG_7562.png" alt="" />
-        <img src="images/IMG_7651.png" alt="" />
+        <img src="images/IMG_ 7563.webp" alt="" />
+        <img src="images/IMG_7562.webp" alt="" />
+        <img src="images/IMG_7651.webp" alt="" />
       </div>
       <div id="top">
         <div id="wrkingarea">
           <div id="nav">
             <div id="nleft">
               <img
-                src="images/healscoutlogo01.png"
+                src="images/healscoutlogo01.webp"
                 alt="logo of HealScout organization or project STEMbitious by Shayan Azfar 9 D" />
               <a href="purpose.html">purpose</a>
               <a href="about.html">about</a>
